[tool.poetry]
name = "arena-agents"
version = "0.1.0"
description = "Hosting Arena AI Agents"
authors = ["yassinekdi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
torch = "^2.4.0"
torchserve = "^0.11.1"
torch-model-archiver = "^0.11.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
